--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@ Fluxus : (C) 2005 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 
 0.9
 
+* osc fix
+* blur works for coloured backgrounds
+* (searchpath '("path/to/textures" "path/to/scripts" "path/to/scripts2" "path/to/etc"))
 ...
 * hide mouse on ctrl m
 * save with text highlighted now safe (saves all rather than selection)
