--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
+Alex Norman 
+Artem Baguinski
+Dan Bethell
 Dave Griffiths 
-James Tittle II : OSX port
-Nik Gaffney : OSX porting and documentation
+Nik Gaffney
+James Tittle
